--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@swc/core": "^1.4.6",
     "@swc/wasm": "^1.4.6",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "browserify-zlib": "^0.2.0",
