--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "process": "^0.11.10",
     "qrcode": "^1.5.3",
     "querystring-es3": "^0.2.1",
+    "socket.io": "^4.7.5",
     "speakeasy": "^2.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
