--- a/jenkinsfile
+++ b/jenkinsfile
@@ -71,6 +71,11 @@ pipeline {
                         }
                 }
             }
+        stage('SMTP Notification logs'){
+            steps{
+                emailext attachLog: true, body: 'check our logs after running the pipeline', compressLog: true, subject: 'this is Jekins output logs from benamor fedi pipeline', to: 'benamorr.fedi@gmail.com'
+            }
+        }
         stage('Prometheus Setup') {
             steps {
                 sh 'docker compose up -d prometheus'
