--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "firebase-admin": "^12.0.0",
     "https-browserify": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.7.1",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
