--- a/jenkinsfile
+++ b/jenkinsfile
@@ -37,7 +37,20 @@ pipeline {
                 }
             }
         }
-       
+        stage('Build application') {
+            steps{
+                script {
+                    withCredentials([
+                        usernamePassword(credentialsId: registryCredentials, passwordVariable: 'REGISTRY_PASSWORD', usernameVariable: 'REGISTRY_USERNAME')
+                    ]) {
+                        sh '''
+                            echo "$REGISTRY_PASSWORD" | docker login -u "$REGISTRY_USERNAME" --password-stdin $registry
+                            docker push $registry/nodemongoapp:6.0
+                        '''
+                    }
+                }
+            }
+        }
         stage('Deploy to Nexus') {
             steps{
                 script {
@@ -47,20 +60,7 @@ pipeline {
                         }
                 }
         }
-        //  stage('Build application') {
-        //     steps{
-        //         script {
-        //             withCredentials([
-        //                 usernamePassword(credentialsId: registryCredentials, passwordVariable: 'REGISTRY_PASSWORD', usernameVariable: 'REGISTRY_USERNAME')
-        //             ]) {
-        //                 sh '''
-        //                     echo "$REGISTRY_PASSWORD" | docker login -u "$REGISTRY_USERNAME" --password-stdin $registry
-        //                     docker push $registry/nodemongoapp:6.0
-        //                 '''
-        //             }
-        //         }
-        //     }
-        // } 
+         
         stage('Run application ') {
             steps{
                 script {
