--- a/jenkinsfile
+++ b/jenkinsfile
@@ -55,7 +55,7 @@ pipeline {
             steps{
                 script {
                  docker.withRegistry("http://"+registry,registryCredentials ) {
-                    sh("docker push $registry/nodemongoapp:5.0")
+                    sh('docker push $registry/nodemongoapp:6.0')
                              }
                         }
                 }
