--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "https-browserify": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.7.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
